# ASWAXS_reduction_pipeline_v5

./: .gitignore  README.md  aswaxs_v5_builder_settings.json  aswaxs_v5_queue.json  pyproject.toml  requirements.txt  run_gui.py
docs/: architecture.md  external_tool_linkers.md  frame_stability_qc.md  project_structure.md  server_message_test.md
scripts/: print_kafka_messages.py  print_zmq_messages.py  run_gui.py  run_kafka_queue_bridge.py  run_online_reducer.py  run_pyfai_gui.py  run_reducer.py  run_viewer.py  write_frame_done.py  write_measurement_done.py
src/aswaxs_live/: __init__.py  app.py  bluesky_queue.py  dashboard.py  frame_stability.py  frame_stability_gui.py  gui.py  h5_tools.py  kafka_bridge.py  paths.py  rack_builder.py  reducer.py  stitcher.py  task_queue.py  ui_theme.py  viewer.py  xanos_bridge.py  xanos_export.py
src/aswaxs_live/app/: __init__.py  dashboard.py  launcher.py  qt_runtime.py
src/aswaxs_live/core/: reduce_aswaxs_sequence.py  reduce_sequence.py  reduction_pipeline.py
src/aswaxs_live/preprocessing/: __init__.py  gui.py  processing.py
src/aswaxs_live/reduction/: __init__.py  analysis_h5.py  aswaxs_sequence.py  frame_qc.py  live.py  pipeline.py  stitching.py  xanos_export.py
src/aswaxs_live/tools/: README.md  __init__.py
src/aswaxs_live/tools/iq_viewer/: __init__.py  qc_widget.py  viewer.py
src/aswaxs_live/tools/linkers/: __init__.py  contracts.py  sample_position.py  xanos.py  (+1 more)
src/aswaxs_live/workflows/: __init__.py  kafka_bridge.py  queue.py  task.py
tests/: test_architecture_imports.py  test_external_tool_linkers.py  test_frame_stability.py  test_geometry_metadata.py  test_guided_window_layouts.py  test_h5_iq_viewer_tools.py  test_monitor_key_reading.py  test_online_reducer_tool.py  test_progress_rate.py  test_pyfai_integrate_config.py  test_qt_runtime.py  test_recovered_results.py  test_sample_position_bridge.py  test_stitcher_scaling.py  test_task_builder_wizard.py  test_task_modes.py  test_xanos_bridge.py  test_xanos_restart_cleanup.py  test_xanos_saxs_output_name.py
(+15 files in other folders)
