[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "framebyframe-aswaxs"
version = "5.0.0"
description = "FrameByFrame-ASWAXS GUI platform for SAXS, WAXS, and ASAXS reduction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fabio",
    "h5py",
    "matplotlib",
    "numpy",
    "pyFAI",
    "pyqtgraph",
    "pyzmq",
    "PyQt5",
    "kafka-python",
    "bluesky-kafka",
]

[project.gui-scripts]
framebyframe-aswaxs = "aswaxs_live.app:main"
framebyframe = "aswaxs_live.app:main"
aswaxs = "aswaxs_live.app:main"

[tool.setuptools.packages.find]
where = ["src"]
